--- a/app/src/main/res/layout/snippet_top_account_setting_toolbar.xml
+++ b/app/src/main/res/layout/snippet_top_account_setting_toolbar.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/white_grey_border_bottom">
-        
+
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,24 +14,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/backArrow"
+                    android:src="@drawable/ic_backarrow"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="hung.dang"
+                    android:layout_toRightOf="@+id/backArrow"
+                    android:text="Options"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="5dp"
                     android:id="@+id/profileName"/>
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="10dp"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/imageProfileMenu"
-                    android:src="@drawable/ic_ellipses"/>
+
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
