--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -1,67 +1,99 @@
-<merge xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp">
 
 
         <TextView
             android:id="@+id/tvPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="3dp" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="250"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="41dp" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Posts"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPosts" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="5dp" />
+            android:layout_marginTop="10dp"
+            android:text="300"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
+            app:layout_constraintStart_toEndOf="@+id/tvPosts"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="41dp" />
+            android:layout_marginTop="5dp"
+            android:text="Followers"
+            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
+            app:layout_constraintStart_toEndOf="@+id/tvPosts"
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="341dp"
-            tools:layout_editor_absoluteY="5dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:text="400"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="345dp"
-            tools:layout_editor_absoluteY="45dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
+            android:text="Following"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />
 
         <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+            android:id="@+id/textEditProfile"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="175dp"
-            tools:layout_editor_absoluteY="86dp" />
+            android:background="@drawable/grey_border"
+            android:layout_marginTop="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="Edit your profile"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
+            app:layout_constraintStart_toEndOf="@+id/tvPosts"
+            app:layout_constraintTop_toBottomOf="@+id/textFollowers" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </merge>
