--- a/app/src/main/res/layout/activity_accountsettings.xml
+++ b/app/src/main/res/layout/activity_accountsettings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,5 +16,17 @@
 
             <include layout="@layout/snippet_top_account_setting_toolbar" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/relLayout3"
+            android:layout_below="@id/reLayout2"
+            android:layout_marginBottom="50dp">
+
+            <include layout="@layout/layout_center_account_settings" />
+        </RelativeLayout>
+
+        <include layout="@layout/layout_bottom_navigation_view" />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
