--- a/app/src/main/res/layout/snippet_top_account_setting_toolbar.xml
+++ b/app/src/main/res/layout/snippet_top_account_setting_toolbar.xml
@@ -2,7 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/white_grey_border_bottom">
 
         <androidx.appcompat.widget.Toolbar
@@ -21,7 +21,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/backArrow"
-                    android:src="@drawable/ic_backarrow"/>
+                    android:src="@drawable/ic_back_arrow"/>
 
                 <TextView
                     android:layout_width="wrap_content"
