--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -11,7 +11,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/relayout1">
+            android:id="@+id/reLayout1">
 
             <include layout="@layout/snippet_top_prolfilebar"/>
         </RelativeLayout>
@@ -20,9 +20,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/relayout1"
+            android:layout_below="@id/reLayout1"
             android:background="@drawable/white_grey_border_bottom"
-            android:id="@id/relayout2">
+            android:id="@id/reLayout2">
 
             <LinearLayout
                 android:layout_width="match_parent"
