--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -51,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Followers"
+            android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
             app:layout_constraintStart_toEndOf="@+id/tvPosts"
             app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
