--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,10 +12,14 @@
         android:paddingLeft="25dp"
         android:paddingRight="25dp" >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:src="@drawable/instagram_logo" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="REGISTER A NEW ACCOUNT"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="40dp"
+            android:textSize="20sp"
+            android:textColor="@color/black" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -40,6 +44,20 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Full name"
+                android:id="@+id/input_username" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="@string/password"
                 android:id="@+id/input_password" />
@@ -48,39 +66,25 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:background="@drawable/white_rounded_button"
-            android:text="@string/login"
-            android:id="@+id/btn_login"
-            android:padding="12dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:text="No account yet? Create one"
-            android:textColor="@color/link_blue"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:id="@+id/link_signup"
-            />
+            android:background="@drawable/white_rounded_button"
+            android:text="@string/register"
+            android:id="@+id/btn_register"
+            android:padding="12dp" />
     </LinearLayout>
-
     <ProgressBar
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:id="@+id/loginRequestLoadingProgressbar"
+        android:id="@+id/registerRequestLoadingProgressbar"
         android:layout_centerInParent="true" />
 
     <TextView
-        android:id="@+id/pleaseWait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Please wait..."
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:layout_alignBottom="@+id/loginRequestLoadingProgressbar"
-        android:layout_alignRight="@+id/loginRequestLoadingProgressbar"
-        android:layout_alignLeft="@+id/loginRequestLoadingProgressbar"/>
+        android:layout_alignBottom="@+id/registerRequestLoadingProgressbar"
+        android:layout_alignRight="@+id/registerRequestLoadingProgressbar"
+        android:layout_alignLeft="@+id/registerRequestLoadingProgressbar"/>
 </RelativeLayout>
