--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
     <ProgressBar
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:id="@+id/loginRequestLoadingProgressbar"
+        android:id="@+id/progressBar"
         android:layout_centerInParent="true" />
 
     <TextView
@@ -80,7 +80,7 @@
         android:text="Please wait..."
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:layout_alignBottom="@+id/loginRequestLoadingProgressbar"
-        android:layout_alignRight="@+id/loginRequestLoadingProgressbar"
-        android:layout_alignLeft="@+id/loginRequestLoadingProgressbar"/>
+        android:layout_alignBottom="@+id/progressBar"
+        android:layout_alignRight="@+id/progressBar"
+        android:layout_alignLeft="@+id/progressBar"/>
 </RelativeLayout>
